<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:layout_marginBottom="@dimen/layout_margin_bottom"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/orange"
            android:textSize="80dp">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableRow>

                    <ImageView
                        android:id="@+id/cub_1_iv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        app:srcCompat="@drawable/green_cub2" />

                    <ImageView
                        android:id="@+id/cub_2_iv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        app:srcCompat="@drawable/red_cub2"
                        android:layout_marginLeft="10dp"
                        android:layout_gravity="center"
                        />

                    <Button
                        android:id="@+id/btn_new_game"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_game"
                        android:layout_marginTop="25dp"
                        android:onClick="onBtnNewGameClick"
                        tools:ignore="UsingOnClickInXml"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp">

                    </Button>
                    <ImageView
                        android:id="@+id/cub_3_iv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        app:srcCompat="@drawable/green_cub2"
                        android:layout_marginRight="10dp"
                        android:layout_gravity="center"/>

                    <ImageView
                        android:id="@+id/cub_4_iv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        app:srcCompat="@drawable/yl_cub2" />
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/btn_reset_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_sc"
                android:onClick="inBtnResetScore"
                tools:ignore="UsingOnClickInXml">
            </Button>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/tetris"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>