<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameActivity"
    android:weightSum="10"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent"
        android:gravity="center"
        android:layout_weight="0.2">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TableRow
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/current_score"
                    tools:ignore="NestedWeights"
                    android:textColor="@color/orange"/>

                <TextView
                    android:id="@+id/tv_current_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/start_zero"
                    android:textStyle="bold"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/orange"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/high_score"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    tools:ignore="MissingConstraints"
                    android:textColor="@color/orange"/>
                <TextView
                    android:id="@+id/tv_high_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    tools:ignore="MissingConstraints"
                    android:text="@string/start_zero"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/orange"/>
            </TableRow>

            <TableRow
                android:gravity="center">
                <Button
                    android:id="@+id/restartBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_restart"
                    android:onClick="restartGame"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    tools:ignore="UsingOnClickInXml" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:weightSum="10"
        android:gravity="center"
        android:layout_weight="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            tools:ignore="NestedWeights">
            <com.example.tetrisapplication.view.TetrisView
                android:id="@+id/view_tetris"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            android:background="@color/black">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/iv_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    app:srcCompat="@drawable/ic_left_arr"
                    tools:ignore="VectorDrawableCompat" />

                <ImageButton
                    android:id="@+id/rotate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/black"
                    app:srcCompat="@drawable/ic_round_circle"
                    tools:ignore="VectorDrawableCompat" />

                <ImageButton
                    android:id="@+id/iv_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_right_arr"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/black"
                    tools:ignore="VectorDrawableCompat" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/iv_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_arrow_ic"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:background="@color/black"
                    tools:ignore="VectorDrawableCompat" />

            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>